--- a/termini.html
+++ b/termini.html
@@ -328,7 +328,7 @@ footer {
 }
 
 footer .container {
-    width: 98%; /* Modificato da max-width per usare una percentuale */
+    width: 95%; /* Aumentato da 98% per allontanare dai bordi */
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -379,7 +379,7 @@ footer .info .block {
     footer .container {
         flex-direction: column;
         align-items: flex-start;
-        width: 95%; /* Leggero aggiustamento per mobile */
+        width: 95%;
     }
     
     footer .info {
