--- a/termini.html
+++ b/termini.html
@@ -328,7 +328,7 @@ footer {
 }
 
 footer .container {
-    width: 95%; /* Aumentato da 98% per allontanare dai bordi */
+    width: 95%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
