--- a/termini.html
+++ b/termini.html
@@ -328,9 +328,8 @@ footer {
 }
 
 footer .container {
-    max-width: 1200px;
+    width: 95%;
     margin: 0 auto;
-    padding: 0 2rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -347,24 +346,33 @@ footer .info {
     display: flex;
     flex-wrap: wrap;
     gap: 2.5rem;
-    font-size: 0.9rem;
+    font-size: 0.85rem;
+    opacity: 0.9;
 }
 
 footer .info div {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 0.5rem;
 }
 
 footer .info i {
     color: #fff;
     font-size: 1.1rem;
+    margin-top: 0.2rem;
+    opacity: 0.9;
+}
+
+footer .info span {
+    display: flex;
+    flex-direction: column;
+    gap: 0.1rem;
+    line-height: 1.2;
 }
 
 footer .info .block {
     display: block;
-    margin-top: 0.25rem;
-    margin-left: 1.5rem;
+    margin: 0;
 }
 
 @media (max-width: 768px) {
