--- a/termini.html
+++ b/termini.html
@@ -420,6 +420,7 @@ footer .info .block {
     }
 }
 
+
       
            
            header {
@@ -917,7 +918,10 @@ a:hover {
             </div>
             <div>
                 <i class="fas fa-phone"></i>
-                <span>06 4546 0481</span>
+                <span>
+                    <a href="tel:+390645460481">06 4546 0481</a> / 
+                    <a href="tel:+390645460483">0483</a>
+                </span>
             </div>
             <div>
                 <i class="fas fa-clock"></i>
@@ -929,6 +933,7 @@ a:hover {
         </div>
     </div>
 </footer>
+
 
    
    
