--- a/termini.html
+++ b/termini.html
@@ -418,6 +418,16 @@ footer .info .block {
     footer .info div:nth-child(3) span {
         display: inline-block; /* Permette di affiancare i testi */
     }
+
+   footer a {
+    color: #fff; /* Forza il colore bianco per i link nel footer */
+    text-decoration: none; /* Rimuove la sottolineatura del link */
+}
+
+footer a:hover {
+    color: #fff; /* Mantiene il colore bianco anche al passaggio del mouse */
+}
+
 }
 
 
