--- a/termini.html
+++ b/termini.html
@@ -738,6 +738,13 @@ a:hover {
         max-width: 100%;
     }
 }   
+
+       @media (max-width: 768px) {
+            .top-banner {
+                padding: 0.5rem 1rem; /* Ridurre il padding verticale */
+                min-height: 40px; /* Ridurre l'altezza minima per la versione mobile */
+            }
+        }
       
    </style>
 </head>
