--- a/termini.html
+++ b/termini.html
@@ -323,12 +323,11 @@ a:hover {
 
 footer {
     background-color: var(--primary);
-    color: #FFFFFF; /* Specifica il colore bianco */
-    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", 
-                 "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* Font stack */
-    font-size: 14px; /* Imposta la dimensione del font */
-    font-weight: 400; /* Peso del font */
-    padding: 2rem 0;
+    color: #FFFFFF;
+    font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 14px;
+    font-weight: 400;
+    padding: 1rem 0; /* Ridotto da 2rem a 1rem */
 }
 
 footer .container {
@@ -350,10 +349,10 @@ footer img {
 footer .info {
     display: flex;
     flex-wrap: wrap;
-    gap: 2.5rem;
+    gap: 4rem; /* Aumentato da 2.5rem a 4rem per maggiore spazio tra i blocchi */
     font-size: 0.85rem;
-    opacity: 0.9;
-    color: RGB(255, 255, 255); /* Usando la notazione RGB */
+    opacity: 1; /* Cambiato da 0.9 a 1 per maggiore visibilità */
+    color: #FFFFFF;
 }
 
 footer .info div {
@@ -363,71 +362,58 @@ footer .info div {
 }
 
 footer .info i {
-    color: #FFFFFF; /* Colore icone */
+    color: #FFFFFF;
     font-size: 1.1rem;
     margin-top: 0.2rem;
-    opacity: 0.9;
+    opacity: 1; /* Cambiato da 0.9 a 1 per maggiore visibilità */
 }
 
 footer .info span {
     display: flex;
-    flex-direction: column;
-    gap: 0.1rem;
+    flex-direction: row; /* Cambiato da column a row */
+    gap: 0.3rem;
     line-height: 1.2;
+    white-space: nowrap; /* Aggiunto per mantenere il testo su una riga */
 }
 
-footer .info .block {
-    display: block;
-    margin: 0;
-}
-
+/* Mantieni le regole esistenti per il mobile */
 @media (max-width: 768px) {
     footer .container {
         flex-direction: column;
-        align-items: center; /* Centra i contenuti */
-        text-align: center; /* Allinea il testo al centro */
+        align-items: center;
+        text-align: center;
     }
 
     footer .info {
         flex-direction: column;
-        gap: 1rem; /* Riduci lo spazio tra le sezioni */
-        align-items: center; /* Centra i blocchi interni */
+        gap: 1rem;
+        align-items: center;
     }
 
     footer .info div {
-        flex-direction: column; /* Per gli altri blocchi lascia i contenuti in colonna */
-        text-align: center; /* Centra il contenuto */
+        flex-direction: column;
+        text-align: center;
     }
 
-    footer .info div:nth-child(1) { /* Indirizzo */
-        flex-direction: row; /* Disporre l'icona e il testo in orizzontale */
-        justify-content: center; /* Centra il contenuto */
-        gap: 0.5rem; /* Spaziatura tra icona e testo */
-        align-items: center; /* Allinea verticalmente */
+    footer .info div:nth-child(1) {
+        flex-direction: row;
+        justify-content: center;
+        gap: 0.5rem;
+        align-items: center;
     }
 
-    footer .info div:nth-child(2), /* Secondo blocco (telefono) */
-    footer .info div:nth-child(3) { /* Terzo blocco (orari) */
-        flex-direction: row; /* Metti in riga i contenuti */
-        justify-content: center; /* Centra i contenuti */
-        align-items: center; /* Allinea verticalmente */
-        gap: 0.5rem; /* Spaziatura tra le voci */
+    footer .info div:nth-child(2),
+    footer .info div:nth-child(3) {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 0.5rem;
     }
 
     footer .info div:nth-child(2) span,
     footer .info div:nth-child(3) span {
-        display: inline-block; /* Permette di affiancare i testi */
+        display: inline-block;
     }
-
-   footer a {
-    color: #fff; /* Forza il colore bianco per i link nel footer */
-    text-decoration: none; /* Rimuove la sottolineatura del link */
-}
-
-footer a:hover {
-    color: #fff; /* Mantiene il colore bianco anche al passaggio del mouse */
-}
-
 }
 
 
