--- a/termini.html
+++ b/termini.html
@@ -352,7 +352,7 @@ footer img {
 footer .info {
     display: flex;
     flex-wrap: wrap;
-    gap: 8rem; /* Aumentato da 4rem a 8rem per dare più spazio tra i blocchi */
+    gap: 3.5rem; /* Ridotto da 8rem a 3.5rem */
     font-size: 0.85rem;
     color: #FFFFFF;
 }
@@ -378,9 +378,9 @@ footer .info span {
 
 /* Stile specifico per il blocco del telefono nella versione desktop */
 footer .info div:nth-child(2) span {
-    flex-direction: row; /* Forza la direzione orizzontale per il numero di telefono */
-    gap: 0.3rem; /* Spazio tra i componenti del numero */
-    white-space: nowrap; /* Previene l'andare a capo */
+    flex-direction: row;
+    gap: 0.3rem;
+    white-space: nowrap;
 }
 
 footer .info a {
@@ -432,7 +432,6 @@ footer .info .block {
         display: inline-block;
     }
 }
-
       
            
            header {
