--- a/termini.html
+++ b/termini.html
@@ -330,11 +330,11 @@ footer {
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 14px;
     font-weight: 400;
-    padding: 1.5rem 0;
+    padding: 2.5rem 0; /* Aumentato da 1.5rem a 2.5rem per maggiore altezza */
 }
 
 footer .container {
-    width: 95%;
+    width: 80%; /* Ridotto da 95% a 80% per aumentare i margini laterali */
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -352,7 +352,7 @@ footer img {
 footer .info {
     display: flex;
     flex-wrap: wrap;
-    gap: 3.5rem; /* Ridotto da 8rem a 3.5rem */
+    gap: 3.5rem;
     font-size: 0.85rem;
     color: #FFFFFF;
 }
@@ -376,7 +376,6 @@ footer .info span {
     line-height: 1.2;
 }
 
-/* Stile specifico per il blocco del telefono nella versione desktop */
 footer .info div:nth-child(2) span {
     flex-direction: row;
     gap: 0.3rem;
@@ -393,9 +392,14 @@ footer .info .block {
     margin: 0;
 }
 
-/* Mantieni le regole esistenti per il mobile */
+/* Mantieni le regole mobili ma ripristina la larghezza del container per schermi piccoli */
 @media (max-width: 768px) {
+    footer {
+        padding: 2rem 0; /* Mantiene un padding più contenuto per mobile */
+    }
+
     footer .container {
+        width: 95%; /* Ripristina la larghezza originale per schermi piccoli */
         flex-direction: column;
         align-items: center;
         text-align: center;
