--- a/termini.html
+++ b/termini.html
@@ -330,8 +330,14 @@ footer {
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 14px;
     font-weight: 400;
-    padding: 2.5rem 0; /* Aumentato da 1.5rem a 2.5rem per maggiore altezza */
+    padding: 2rem 0;
+    background-image: url('path/to/footermorante.png');
+    background-size: 200px 200px; /* Aumenta la dimensione dell'immagine */
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+
 
 footer .container {
     width: 80%; /* Ridotto da 95% a 80% per aumentare i margini laterali */
