--- a/termini.html
+++ b/termini.html
@@ -330,11 +330,7 @@ footer {
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 14px;
     font-weight: 400;
-    padding: 2rem 0;
-    background-image: url('path/to/footermorante.png');
-    background-size: 200px 200px; /* Aumenta la dimensione dell'immagine */
-    background-repeat: no-repeat;
-    background-position: center;
+    padding: 2rem 0; /* Aumentato da 1.5rem a 2.5rem per maggiore altezza */
 }
 
 
@@ -934,7 +930,7 @@ a:hover {
 <footer>
     <div class="container">
         <img src="footermorante.png" alt="Logo Biblioteca Morante" 
-             style="cursor: pointer;" 
+             style="cursor: pointer; width: 200px; height: auto;" 
              onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
         <div class="info">
             <div>
