--- a/termini.html
+++ b/termini.html
@@ -330,10 +330,8 @@ footer {
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 14px;
     font-weight: 400;
-    padding: 2rem 0; /* Aumentato da 1.5rem a 2.5rem per maggiore altezza */
+    padding: 2.5rem 0; /* Aumentato da 1.5rem a 2.5rem per maggiore altezza */
 }
-
-
 
 footer .container {
     width: 80%; /* Ridotto da 95% a 80% per aumentare i margini laterali */
@@ -346,12 +344,10 @@ footer .container {
 }
 
 footer img {
-    width: 200px; /* Imposta una larghezza maggiore */
-    height: auto; /* Mantieni le proporzioni originali */
+    height: 35px;
     max-width: 100%;
     cursor: pointer;
 }
-
 
 footer .info {
     display: flex;
@@ -932,7 +928,7 @@ a:hover {
 <footer>
     <div class="container">
         <img src="footermorante.png" alt="Logo Biblioteca Morante" 
-             style="cursor: pointer; width: 200px; height: 80px;" 
+             style="cursor: pointer;" 
              onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
         <div class="info">
             <div>
@@ -959,7 +955,6 @@ a:hover {
         </div>
     </div>
 </footer>
-
 
 
    
