--- a/termini.html
+++ b/termini.html
@@ -494,6 +494,12 @@ footer .info .block {
        }
 
 
+@media (max-width: 768px) {
+    .top-banner {
+        min-height: 50px; /* Ridotto solo per la versione mobile */
+        padding: 0.5rem 1rem; /* Eventualmente ridurre anche il padding */
+    }
+}
 
       
 
