--- a/termini.html
+++ b/termini.html
@@ -496,10 +496,11 @@ footer .info .block {
 
 @media (max-width: 768px) {
     .top-banner {
-        min-height: 50px; /* Ridotto solo per la versione mobile */
-        padding: 0.5rem 1rem; /* Eventualmente ridurre anche il padding */
+        min-height: 50px !important;
+        padding: 0.5rem 1rem !important;
     }
 }
+
 
       
 
