--- a/termini.html
+++ b/termini.html
@@ -764,12 +764,9 @@ a:hover {
         height: 30px; /* Reduced logo size */
     }
     
+    /* Rimosso il codice che modificava le dimensioni delle icone social */
     .social-icons {
-        gap: 0.7rem; /* Reduced gap between social icons */
-    }
-    
-    .social-icons a {
-        font-size: 1.2rem; /* Slightly smaller icons */
+        gap: 1rem; /* Mantenuto il gap originale */
     }
 }
 
