--- a/raccolta.html
+++ b/raccolta.html
@@ -456,7 +456,48 @@ a:hover {
     }
 }
 
-
+@media screen and (max-width: 768px) {
+  .top-banner {
+    padding: 0.8rem 1rem;  /* Riduco leggermente il padding orizzontale per dare più spazio */
+  }
+  
+  .roma-logo {
+    height: 48px;  /* Aumentato da 40px */
+  }
+  
+  .social-icons {
+    gap: 0.75rem;  /* Riduco leggermente lo spazio tra le icone per compensare */
+  }
+  
+  .social-icons a,
+  .social-icons button {
+    font-size: 1.75rem;  /* Aumentato da 1.5rem */
+  }
+  
+  /* Assicuriamoci che il contenitore mantenga l'allineamento corretto */
+  .top-banner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 72px;  /* Garantisce un'altezza minima del banner */
+  }
+  
+  /* Aggiustiamo il contenitore delle icone social per il nuovo sizing */
+  .social-icons {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+  
+  /* Miglioriamo l'area cliccabile per le icone più grandi */
+  .social-icons a,
+  .social-icons button {
+    padding: 0.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
         
     </style>
 </head>
