--- a/raccolta.html
+++ b/raccolta.html
@@ -422,7 +422,26 @@ a:hover {
 }
 
 
-        
+  /* Aggiungi queste regole alla fine del blocco <style>, prima della chiusura */
+
+@media (max-width: 768px) {
+  .roma-logo {
+    height: 24px; /* Uniforma all'altezza dell'icona di stampa */
+  }
+  
+  .social-icons a {
+    font-size: 24px; /* Uniforma le dimensioni delle icone social */
+  }
+  
+  .print-button {
+    font-size: 24px; /* Assicura che l'icona di stampa sia della stessa dimensione */
+  }
+  
+  /* Mantiene l'altezza originale del banner */
+  .top-banner {
+    padding: 0.8rem 2rem;
+  }
+}      
 
 
 
