--- a/termini.html
+++ b/termini.html
@@ -164,45 +164,47 @@
     margin-top: 60px;
 }
 
-
- /* Poi aggiungiamo le regole specifiche per mobile con maggiore specificità */
-@media screen and (max-width: 768px) {
-  .content-wrapper .nav-icons {
+.nav-icons {
     position: absolute;
-    left: 1rem !important; /* Forziamo la posizione a sinistra */
-    top: -50px !important;
-    transform: none !important;
-    justify-content: flex-start !important;
-    padding: 0 !important;
-    gap: 1.5rem !important;
-    z-index: 100;
-  }
+    top: -60px;
+    left: 50%;
+    transform: translateX(-50%); /* Semplificato il transform */
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+    padding-top: 20px;
+    visibility: visible;
+    opacity: 1;
+}
+      
 
-  /* Manteniamo il separatore tra le icone */
-  .content-wrapper .nav-icons a:first-child::after {
-    content: '';
-    position: absolute;
-    left: calc(100% + 0.75rem);
-    top: 50%;
-    transform: translateY(-50%);
-    height: 20px;
-    width: 1px;
-    background-color: rgba(128, 128, 128, 0.3);
-  }
-
-  /* Aggiustiamo il wrapper per compensare la nuova posizione delle icone */
-  .content-wrapper {
-    margin-top: 70px;
-    position: relative;
-  }
-
-  /* Assicuriamoci che l'header non interferisca */
-  header {
-    min-height: auto !important;
-    padding: 1rem 0 !important;
-  }
+@media (max-width: 1400px) {
+    .nav-icons {
+        transform: translateX(calc(-50% - 300px));
+    }
 }
 
+@media (max-width: 1200px) {
+    .nav-icons {
+        transform: translateX(calc(-50% - 200px));
+    }
+}
+
+@media (max-width: 992px) {
+    .nav-icons {
+        transform: translateX(calc(-50% - 100px));
+    }
+}
+
+@media (max-width: 768px) {
+    .nav-icons {
+        position: relative;
+        left: 0;
+        top: 0;
+        transform: none;
+        justify-content: flex-start;
+    }
+}
 
 
 
