--- a/termini.html
+++ b/termini.html
@@ -205,19 +205,16 @@
     flex-direction: column;
   }
 
-  /* Rimuoviamo il posizionamento relativo che causava il problema */
   .nav-icons {
-    position: absolute;
-    top: 10px;  /* Posiziona in alto */
-    left: 20px;  /* Allinea a sinistra */
-    transform: none;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-    justify-content: flex-start;
-    width: auto;
+    position: absolute !important;
+    top: 10px !important;
+    left: 20px !important;
+    transform: none !important;
+    justify-content: flex-start !important;
+    padding: 0 !important;
+    gap: 1.5rem !important;
   }
+
 
   /* Mantieni il separatore verticale */
   .nav-icons a:first-child::after {
@@ -232,7 +229,15 @@
     display: block;
   }
 
-  .container {
+     header {
+    min-height: auto;
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+
+.container {
     padding: 0.5rem;
     flex-direction: row;
     justify-content: center;
