--- a/termini.html
+++ b/termini.html
@@ -323,13 +323,17 @@
     line-height: 1.2; /* Rende il titolo meno alto */
        }
        
-       h2 {
-           color: var(--primary);
-           font-size: 1.7rem; /* Ridotto da 1.8rem */
-           margin-bottom: 2rem;
-           padding-bottom: 0.5rem;
-           border-bottom: 2px solid var(--primary);
-       }
+     h2 {
+    color: var(--primary);  /* Mantiene il colore amaranto esistente */
+    font-size: 1.7rem;
+    margin-bottom: 2rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 2px solid var(--primary);
+    font-family: 'Space Grotesk', sans-serif !important;  /* Usa lo stesso font del testo */
+    font-weight: 500 !important;  /* Usa lo stesso peso del testo */
+    letter-spacing: normal !important;  /* Reset spaziatura lettere */
+    word-spacing: 0px !important;  /* Reset spaziatura parole */
+}
        
        ul {
            list-style-type: none;
