--- a/raccolta.html
+++ b/raccolta.html
@@ -476,6 +476,14 @@ a:hover {
         max-width: 100%;
     }
 }
+
+/* Modifica per i titoli */
+.bg-white h2 {
+    font-weight: normal; /* Rimuove il grassetto */
+    font-family: "Space Grotesk", sans-serif; /* Assicura che il font sia lo stesso del testo */
+    color: #970a2c; /* Mantiene il colore amaranto */
+}
+
         
     </style>
 </head>
