--- a/raccolta.html
+++ b/raccolta.html
@@ -477,12 +477,14 @@ a:hover {
     }
 }
 
-/* Modifica per i titoli */
+/* Modifica per i titoli dei paragrafi */
 .bg-white h2 {
-    font-weight: normal; /* Rimuove il grassetto */
-    font-family: "Space Grotesk", sans-serif; /* Assicura che il font sia lo stesso del testo */
+    font-family: "Space Grotesk", sans-serif; /* Stesso font del titolo principale */
+    font-weight: 600; /* Imposta il grassetto come nel titolo principale */
+    font-size: 1.875rem; /* Imposta la dimensione simile al titolo principale */
     color: #970a2c; /* Mantiene il colore amaranto */
 }
+
 
         
     </style>
