--- a/termini.html
+++ b/termini.html
@@ -156,11 +156,13 @@
      
 
       .content-wrapper {
+
+    margin-top: 60px !important;
+    padding: 0 1rem !important;
+    position: relative !important;     
     max-width: 900px;
     width: 100%;
     margin: 2rem auto;
-    padding: 0 1rem;
-    position: relative;
     margin-top: 60px;
 }
 
