--- a/termini.html
+++ b/termini.html
@@ -49,6 +49,9 @@
     justify-content: space-between;
     align-items: center;
     min-height: 60px; /* Ridotto da 80px */
+    position: relative;  /* Aggiunto */
+    z-index: 10;        /* Aggiunto */
+    width: 100%;        /* Aggiunto */
 }
 
 
